fixed spacing

--- a/app/assets/stylesheets/articles_style.css
+++ b/app/assets/stylesheets/articles_style.css
@@ -12,8 +12,8 @@ h1.articles-page-header {
   font-family: 'Open Sans',sans-serif;
 }
 
-div #articles-page-content {
-  margin-top: 60px;
+div#articles-page-content {
+  margin-top: 20px;
 }
 
 button {
