--- a/app/assets/stylesheets/fashion-article.css
+++ b/app/assets/stylesheets/fashion-article.css
@@ -1,5 +1,6 @@
+
 .trend {
-padding-top: 150px;
+padding-top: 10px;
 }
 
 h1 {
